<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LineMonitorBot</string>
    <string name="database_viewer_activity_name">Database Viewer</string>
    <string name="roll_math_activity_name">Roll Math</string>
    <string name="select_line_activity_name">LineMonitorBot</string>
    <string name="settings_activity_name">Settings</string>
    <string name="tips_activity_name">LineMonitorBot Tips</string>
    <string name="skids_list_activity_name">Skids List</string>
    
    <string name="title_fragment_skid_times">Skid Times</string>
    <string name="title_fragment_rates">Rates</string>
    <string name="title_fragment_draining">Draining</string>
    <string name="title_fragment_calculator_button">Calculator</string>
    <string name="title_fragment_diameter">Diameter</string>
    <string name="title_fragment_weight">Weight</string>
    <string name="title_fragment_linear_feet">Linear Feet</string>
    
    <string name="action_pick_line_title">Pick Line</string>
    <string name="action_pick_job_title">Pick Job</string>
    <string name="action_settings">Settings</string>
    <string name="action_view_database_title">View Database</string>
    <string name="action_tips_and_apps_title">Tips and Apps</string>
    
    <string-array name="line_list">
        <item >Line 42</item>    
    </string-array>
    <string-array name="tips_and_apps_headers">
        <item >SUGGESTED APPS</item>    
        <item >Motion Actions</item>    
        <item >Tiny Flashlight</item>    
        <item >Proximity Actions</item>
        <item >\nTIPS</item>
        <item >To enter partial skids:</item>    
        <item >To notice the vibrating alarm:</item>    
        <item >To track your reclaim:</item>    
    </string-array>
    <string-array name="tips_and_apps_details">
        <item >&#160;&#160;&#160;&#160;&#160;&#160;(touch to view in Play Store)\n</item>
        <item >Open LineMonitorBot by shaking your phone.</item>
        <item >Change the LED Light Default setting to On for instant light.</item>
        <item >Turn your phone on just by taking it out of your pocket, with Smart Screen On.</item>
        <item > </item>
        <item >Enter your last skid as a fraction.\n
            <i> Example</i>: Your fourth skid will be 900 sheets instead of 1200. 
            900/1200 = .75, so enter \"3.75\" as the total number of skids.</item>
        <item >Carry a tape measure in your pocket to keep your phone against your leg.</item>
        <item >Record your predicted finish time at the start of the job. If you then finish at 9:42 instead of 9:00, 
            you had 0.7 hours of reclaim. </item>
    </string-array>
        
    <string-array name="jobs_list">
        <item >W0 #1</item>
        <item >+ New&#160;</item>
    </string-array>
    <string-array name="vibrator_durations_entries">
        <item >Long</item>
        <item >Short</item>
        <item >Off</item>
    </string-array>
    <string-array name="vibrator_durations_values">
        <item >Long</item>
        <item >Short</item>
        <item >Off</item>        
    </string-array>
	<string name="new_wo">+ New</string>
	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>
	<string name="clear_wos">Clear</string>
	<string name="support_email">kovaciny_karl@yahoo.com</string>
	<string name="placeholder">&#8230;</string>
	<string name="placeholder_coming_soon"><i>\nComing soon...</i></string>
	<string name="debug_display">Debug</string>
	<string name="calculate">Calculate</string>
	<string name="title_activity_alarm_manager">Skid Finished Alarm Manager</string>
	<string name="default_sheet_weight_label">Sheet weight</string>
	<string name="default_sheet_weight">0.0</string>
	<string name="btn_go_by_height_text">Go by\nheight</string>
	<string name="btn_enter_product_text">Enter Product</string>
	<string name="btn_get_rates_text">Get Rates</string>
	<string name="lbl_finished_height">Finished height\n<small>(highest spot)</small></string>
	<string name="lbl_current_gauge">Current gauge\n<small>(highest reading)</small></string>
	<string name="lbl_ten_second_letdown">10-second letdown\n<small>(grams)</small></string>
	<string name="error_empty_field">Please enter a value</string>
	<string name="error_need_nonzero">Value must be greater than zero</string>
	<string name="error_net_less_than_gross">Gross width must be larger than sheet width</string>
	<string name="error_differential_too_low">Differential should be greater than\u0020</string>
	<string name="error_differential_too_high">Differential should be less than\u0020</string>
	<string name="error_over_maximum_skids">Maximum of %1 skids per job</string>
	<string name="error_current_greater_than_total">Current value should be lower than total</string>
	<string name="error_need_at_least_one">You must fill in one field in this group</string>
	<string name="error_need_only_one">You may only fill in one field in this group</string>
	<string name="error_mutually_exclusive_need_at_least_one">Complete at least one of these groups</string>
	<string name="error_mutually_exclusive_need_only_one">Complete only one of these groups</string>
	<string name="prompt_need_product">Please enter a product</string>
	<string name="reminder_no_differential_speed">Enter the low value from the line speed readout.</string>
	<string name="confirm_clear_wos">Delete all work orders?</string>
	<string name="reminder_differential_format">Differential speed entered as percent. Converting.</string>
	<string name="pref_timer_default">Automatic</string>
	<string name="toast_alarm_canceled">Alarm canceled</string>
	
	<string name="label_novatec_setpoint">Novatec setpoint</string>
	
</resources>
