<menu xmlns:android="http://schemas.android.com/apk/res/android" >

	<item
        android:id="@+id/action_pick_line"
        android:orderInCategory="2"
        android:showAsAction="always"
        android:title="@string/action_pick_line_title" >
		<!-- pick line submenu --> 
        <menu 
            android:id = "@+id/pick_line_submenu">
            <item android:id="@+id/line_list"
                  android:title="@string/placeholder" >
            </item>
        </menu>
    </item>
	<item
        android:id="@+id/action_pick_job"
        android:orderInCategory="3"
        android:showAsAction="always"
        android:title="@string/action_pick_job_title" >
        <!-- pick job submenu -->
        <menu
            android:id="@+id/pick_job_submenu">
            <item android:id="@+id/new_wo"
                  android:title="@string/new_wo" />
            <item android:id="@+id/clear_wos"
                  android:title="@string/clear_wos" />
        </menu>
	</item>
	
	<item 
	    android:id="@+id/action_view_database"
	    android:visible="false"
	    android:orderInCategory="4"
	    android:showAsAction="never"
	    android:title="@string/action_view_database_title" />
	
	<item 
	    android:id="@+id/action_tips_and_apps"
	    android:orderInCategory="5"
	    android:showAsAction="never"
	    android:title="@string/action_tips_and_apps_title" />
	
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

</menu>